--- a/src/train_random_forest/conda.yml
+++ b/src/train_random_forest/conda.yml
@@ -1,13 +1,15 @@
-name: basic_cleaning
+name: train_random_forest
 channels:
   - conda-forge
   - defaults
 dependencies:
   - pandas=1.1.4
-  - pip=20.3.3
+  - pip=21.1.1
   - mlflow=1.14.1
   - scikit-learn=0.24.1
   - matplotlib=3.2.2
   - pillow=8.1.2
+  - numpy=1.20.0
   - pip:
       - wandb==0.10.21
+      - protobuf~=3.20.1
